# LearnCuda

./: .gitignore  .gitmodules  CMakeLists.txt
matmult/: CMakeLists.txt  common.cuh  gemm.cu  gemm_cutlass.cu  gemm_extreme.cu  gemm_fast.cu  gemm_faster.cu  gemm_naive.cu  gemm_ultra.cu  matmult.cu  test.nb
profile/matmult/: 1024_tile_16.ncu-rep  1024_tile_32.ncu-rep  8192.ncu-rep  8192_cutlass_4090.ncu-rep  8192_extreme_tile_128_256_4090.ncu-rep  8192_extreme_tile_128_256_no_bank_conflict_4090.ncu-rep  8192_extreme_tile_128_256_no_bank_conflict_L2_4090.ncu-rep  8192_fast128_4090.ncu-rep  8192_fast256_4090.ncu-rep  8192_fast512_4090.ncu-rep  8192_faster_tile_128_4090.ncu-rep  8192_faster_tile_64_4090.ncu-rep  8192_tile_16.ncu-rep  8192_tile_16_4090.ncu-rep  8192_tile_32_4090.ncu-rep  8192_ultra_tile_128_4090.ncu-rep  matmult.ncu-proj
